      working instead of taxing.
   -- Fixed bug where autotax didn't work if DEFAULT_WORK_ORDER was
      disabled and the unit was submitted as part of an orderset but had
      blank orders (only when TAX_PILLAGE_MONTHLONG was set).
   -- Fixed a bug where withdraw didn't give item info on items which the
      faction hadn't already seen the item info.
   -- GROW_RACES option to disperse races across an area at world creation
      rather than set them up hex-by-hex. This is tuneable by adjusting the
      gamedef value.
   -- PLAYER_ECONOMY: very basic ruleset for the player-run economy are in
      place.  Enabling this means that population grows or dies according to
      given space (habitat) and other factors and that the economy is
      determined by a region's development parameter. Recruitment reduces
      the population while give 0 orders increase it (no check for races
      yet). This is not yet reflected in the rules.
   -- Started work on getting rid of the hardcoded enums.  Battle Items,
      Weapons, Armors, Mounts and Men are now done, as are Effects, Specials,
      and Ranges.  They are now completely looked up based on a unique text
      key to find the one desired.
   -- Fixed a small goof in the grow races code (a race (I_VIKING for example)
      was being used as an index into the ManDefs array.  This worked fine for
      the 'base' races, but would have failed on any of the extended ones.
   -- Fixed bug in transport which didn't prevent the use of incomplete
      transport structures.
   -- Added Tony Briggs <abriggs@iinet.net.au> COASTAL_FISH patch.
   -- Initial cut at 'attribute' and hooking them up to skills/items/unit
      flags which modify them.  This will hopefully get rid of some of the
      hackishness with some hardcoded skills.
   -- Fixed riding check in GetAttackRiding to use the lowest weight man
      in the unit (for races which are not 'normal weight')