@@ -2412,7 +2412,7 @@ int ARegion::GetObservation(Faction *f, int usepassers)
 		forlist(&farsees) {
 			Farsight *farsight = (Farsight *)elem;
 			if(farsight && farsight->faction == f && farsight->unit) {
-				int o = farsight->unit->GetSkill(S_OBSERVATION);
+				int o = farsight->unit->GetAttribute("observation");
 				if(o > obs) obs = o;
 			}
 		}
@@ -2424,7 +2424,7 @@ int ARegion::GetObservation(Faction *f, int usepassers)
 		forlist(&passers) {
 			Farsight *farsight = (Farsight *)elem;
 			if(farsight && farsight->faction == f && farsight->unit) {
-				int o = farsight->unit->GetSkill(S_OBSERVATION);
+				int o = farsight->unit->GetAttribute("observation");
 				if(o > obs) obs = o;
 			}
 		}
@@ -2435,7 +2435,7 @@ int ARegion::GetObservation(Faction *f, int usepassers)
 		forlist ((&obj->units)) {
 			Unit *u = (Unit *) elem;
 			if (u->faction == f) {
-				int temp = u->GetSkill(S_OBSERVATION);
+				int temp = u->GetAttribute("observation");
 				if (temp>obs) obs = temp;
 			}
 		}
@@ -2530,9 +2530,20 @@ int ARegion::HasCityGuard()
 	return 0;
 }
 
-void ARegion::NotifySpell(Unit *caster, int spell, ARegionList *pRegs)
+int ARegion::NotifySpell(Unit *caster, int spell, ARegionList *pRegs)
 {
 	AList flist;
+	unsigned int i;
+
+	if (!(SkillDefs[spell].flags & SkillType::NOTIFY)) {
+		// Okay, we aren't notifyable, check our prerequisites
+		for(i=0; i<sizeof(SkillDefs[spell].depends)/sizeof(SkillDepend); i++) {
+			int reqsk = SkillDefs[spell].depends[i].skill;
+			if (reqsk == -1) break;
+			if(NotifySpell(caster, reqsk, pRegs)) return 1;
+		}
+		return 0;
+	}
 
 	forlist((&objects)) {
 		Object *o = (Object *) elem;
@@ -2549,14 +2560,12 @@ void ARegion::NotifySpell(Unit *caster, int spell, ARegionList *pRegs)
 		}
 	}
 
-	{
-		forlist(&flist) {
-			FactionPtr *fp = (FactionPtr *) elem;
-			fp->ptr->Event(AString(*(caster->name)) + " uses " +
-						   SkillStrs(spell) +
-						   " in " + Print(pRegs) + ".");
-		}
+	forlist_reuse (&flist) {
+		FactionPtr *fp = (FactionPtr *) elem;
+		fp->ptr->Event(AString(*(caster->name)) + " uses " +
+					   SkillStrs(spell) + " in " + Print(pRegs) + ".");
 	}
+	return 1;
 }
 
 // ALT, 26-Jul-2000
