@@ -2500,7 +2500,7 @@ static SkillType sd[] = {
 	 NULL, NULL,
 	 {{S_PATTERN,1},{-1,0},{-1,0}}},
 	{"weather lore","WEAT",100,
-	 SkillType::MAGIC | SkillType::CAST,
+	 SkillType::MAGIC | SkillType::CAST | SkillType::NOTIFY,
 	 NULL, "rng_weather",
 	 {{S_FORCE,1},{S_PATTERN,1},{-1,0}}},
 	{"summon wind","SWIN",100,
@@ -2524,7 +2524,7 @@ static SkillType sd[] = {
 	 "clear_skies", NULL,
 	 {{S_WEATHER_LORE,1},{-1,0},{-1,0}}},
 	{"earth lore","EART",100,
-	 SkillType::MAGIC | SkillType::CAST,
+	 SkillType::MAGIC | SkillType::CAST | SkillType::NOTIFY,
 	 NULL, NULL,
 	 {{S_PATTERN,1},{-1,0},{-1,0}}},
 	{"wolf lore","WOLF",100,
@@ -2540,7 +2540,7 @@ static SkillType sd[] = {
 	 NULL, NULL,
 	 {{S_BIRD_LORE,3},{-1,0},{-1,0}}},
 	{"necromancy","NECR",100,
-	 SkillType::MAGIC,
+	 SkillType::MAGIC | SkillType::NOTIFY,
 	 NULL, NULL,
 	 {{S_FORCE,1},{S_SPIRIT,1},{-1,0}}},
 	{"summon skeletons","SUSK",100,
@@ -2568,7 +2568,7 @@ static SkillType sd[] = {
 	 "banish_undead", NULL,
 	 {{S_NECROMANCY,1},{-1,0},{-1,0}}},
 	{"demon lore","DEMO",100,
-	 SkillType::MAGIC,
+	 SkillType::MAGIC | SkillType::NOTIFY,
 	 NULL, NULL,
 	 {{S_FORCE,1},{S_SPIRIT,1},{-1,0}}},
 	{"summon imps","SUIM",100,
@@ -2588,7 +2588,7 @@ static SkillType sd[] = {
 	 "banish_demon", NULL,
 	 {{S_DEMON_LORE,1},{-1,0},{-1,0}}},
 	{"illusion","ILLU",100,
-	 SkillType::MAGIC,
+	 SkillType::MAGIC | SkillType::NOTIFY,
 	 NULL, NULL,
 	 {{S_FORCE,1},{S_PATTERN,1},{-1,0}}},
 	{"phantasmal entertainment","PHEN",100,
@@ -2620,7 +2620,7 @@ static SkillType sd[] = {
 	 "dispel_illusion", NULL,
 	 {{S_ILLUSION,1},{-1,0},{-1,0}}},
 	{"artifact lore","ARTI",100,
-	 SkillType::MAGIC,
+	 SkillType::MAGIC | SkillType::NOTIFY,
 	 NULL, NULL,
 	 {{S_FORCE,1},{S_PATTERN,1},{S_SPIRIT,1}}},
 	{"create ring of invisibility","CRRI",100,
@@ -4107,7 +4107,7 @@ RangeType *RangeDefs = rtd;
 int NUMRANGES = sizeof(rtd) / sizeof(rtd[0]);
 
 static AttribModType atd[] = {
-	{"tactics",
+	{"tactics", AttribModType::CHECK_MONSTERS,
 	 {{AttribModItem::SKILL | AttribModItem::CUMULATIVE,
 	   "TACT", AttribModItem::UNIT_LEVEL, 1 },
 	  {0,
@@ -4115,8 +4115,10 @@ static AttribModType atd[] = {
 	  {0,
 	   NULL, 0, 0},
 	  {0,
+	   NULL, 0, 0},
+	  {0,
 	   NULL, 0, 0}}},
-	{"combat",
+	{"combat", 0,
 	 {{AttribModItem::SKILL | AttribModItem::CUMULATIVE,
 	   "COMB", AttribModItem::UNIT_LEVEL, 1 },
 	  {0,
@@ -4124,17 +4126,21 @@ static AttribModType atd[] = {
 	  {0,
 	   NULL, 0, 0},
 	  {0,
+	   NULL, 0, 0},
+	  {0,
 	   NULL, 0, 0}}},
-	{"stealth",
+	{"stealth", AttribModType::CHECK_MONSTERS | AttribModType::USE_WORST,
 	 {{AttribModItem::SKILL | AttribModItem::CUMULATIVE,
 	   "STEA", AttribModItem::UNIT_LEVEL, 1 },
 	  {AttribModItem::ITEM | AttribModItem::PERMAN,
 	   "RING", AttribModItem::CONSTANT, 3},
 	  {AttribModItem::FLAGGED,
 	   "invis", AttribModItem::CONSTANT, 3},
+	  {AttribModItem::FLAGGED,
+	   "guard", AttribModItem::FORCECONSTANT, 0},
 	  {0,
 	   NULL, 0, 0}}},
-	{"observation",
+	{"observation", AttribModType::CHECK_MONSTERS,
 	 {{AttribModItem::SKILL | AttribModItem::CUMULATIVE,
 	   "OBSE", AttribModItem::UNIT_LEVEL, 1 },
 	  {AttribModItem::SKILL,
@@ -4142,8 +4148,10 @@ static AttribModType atd[] = {
 	  {AttribModItem::ITEM,
 	   "AMTS", AttribModItem::CONSTANT, 2},
 	  {0,
+	   NULL, 0, 0},
+	  {0,
 	   NULL, 0, 0}}},
-	{"flying",
+	{"flying", 0,
 	 {{AttribModItem::SKILL | AttribModItem::CUMULATIVE,
 	   "SWIN", AttribModItem::CONSTANT, 2},
 	  {0,
@@ -4151,12 +4159,16 @@ static AttribModType atd[] = {
 	  {0,
 	   NULL, 0, 0},
 	  {0,
+	   NULL, 0, 0},
+	  {0,
 	   NULL, 0, 0}}},
-	{"entertainment",
+	{"entertainment", 0,
 	 {{AttribModItem::SKILL,
-	   "ENTE", AttribModItem::UNIT_LEVEL, 1},
-	  {AttribModItem::SKILL,
 	   "PHEN", AttribModItem::UNIT_LEVEL, 5},
+	  {AttribModItem::SKILL,
+	   "ENTE", AttribModItem::UNIT_LEVEL, 1},
+	  {0,
+	   NULL, 0, 0},
 	  {0,
 	   NULL, 0, 0},
 	  {0,
