@@ -667,3 +667,8 @@ Changes from 4.0.10 -> 5.0.0
       hackishness with some hardcoded skills.
    -- Fixed riding check in GetAttackRiding to use the lowest weight man
       in the unit (for races which are not 'normal weight')
+   -- Attributes now handle monsters as well, and there is a PracticeAttribute
+      which knows how to practice skills which modify attributes.  This gets
+      rid of the majority of places where COMB, OBSE, STEA, and TACT were
+      used raw in the code!
+   -- Cleaned up NotifySpell so it's generic.
